--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
-<html>
-    <head>
-        <title></title>
-    </head>
+<!doctype html>
+<html lang="en">
+	<head>        
+		<title> Seaside Motorhub</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		
+		<!-- Custom CSS -->
+		<link rel="stylesheet" href="assets/css/main.css">
 
-    <header>
-    </header>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+		<!-- Bootstrap -->
+		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+
+  </head>
+
+	<header>
+	</header>
+
+	<body>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block w-100" src="assets/img/banner.jpg" alt="First slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="assets/img/bansner.jpg" alt="Second slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="assets/img/banner.jpg" alt="Third slide">
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+
+		<!-- JS -->
+		<script src="assets/js/bootstrap.min.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+	</body>
 </html>
